--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "styled-components": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "node server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
