--- a/package.json
+++ b/package.json
@@ -15,11 +15,21 @@
     "styled-components": "^3.3.3"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "node server/app.js",
+    "start": "react-scripts start",
+    "heroku-postbuild": "npm install && npm install --only=dev && npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm install --only=dev && npm run build"
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "^3.6.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "nodemon": "^1.18.1",
+    "prettier": "^1.13.7"
   }
 }
